# ChangeLog for sec-policy/selinux-base-policy
# Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sec-policy/selinux-base-policy/ChangeLog,v 1.33 2005/01/20 01:00:48 pebenito Exp $

  19 Jan 2005; Chris PeBenito <pebenito@gentoo.org>
  selinux-base-policy-20041123.ebuild:
  Mark stable.

*selinux-base-policy-20041123 (23 Nov 2004)

  23 Nov 2004; Chris PeBenito <pebenito@gentoo.org>
  +selinux-base-policy-20041123.ebuild:
  New release with 1.18 merge.

*selinux-base-policy-20041023 (23 Oct 2004)

  23 Oct 2004; Chris PeBenito <pebenito@gentoo.org>
  +selinux-base-policy-20041023.ebuild:
  New release with 1.16 merge. Tcpd and inetd have been deprecated since they
  are not in the base system anymore, and probably no one uses them anyway.

*selinux-base-policy-20040906 (06 Sep 2004)

  06 Sep 2004; Chris PeBenito <pebenito@gentoo.org>
  +selinux-base-policy-20040906.ebuild:
  New release with 1.14 merge, which has policy 18 (fine-grained netlink)
  features.

  05 Sep 2004; Chris PeBenito <pebenito@gentoo.org>
  selinux-base-policy-20040225.ebuild, -selinux-base-policy-20040509.ebuild,
  -selinux-base-policy-20040604.ebuild, selinux-base-policy-20040629.ebuild,
  selinux-base-policy-20040702.ebuild:
  Remove old builds, switch to epause and ebeep in remaining builds.

*selinux-base-policy-20040702 (02 Jul 2004)

  02 Jul 2004; Chris PeBenito <pebenito@gentoo.org>
  +selinux-base-policy-20040702.ebuild:
  Same as 20040629, except with updated flask headers, which will come out in
  2.6.8.

*selinux-base-policy-20040629 (29 Jun 2004)

  29 Jun 2004; Chris PeBenito <pebenito@gentoo.org>
  +selinux-base-policy-20040629.ebuild:
  Large sysadmfile cleanup: disable admin_separation to give sysadm_r back its
  ablility to modify all files. Minor fixes: portage_r works again, syslog-ng
  breakage fixed, put back manual PaX policy for pageexec/segmexec.

  16 Jun 2004; Chris PeBenito <pebenito@gentoo.org>