@@ -1,20 +1,18 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-MD5 68165a8ba365b374b3f8c9dfcba83a3f ChangeLog 9383
+MD5 96a24b40d5e85e7c599386c782f60749 ChangeLog 9536
 MD5 808b5f7f5d6654666e9193672d463229 metadata.xml 473
 MD5 a3f3a3caf05f8f127d503128a0c4b36c selinux-base-policy-20041123.ebuild 2429
-MD5 002d3acea2205ffa0d5a3351fb19c671 selinux-base-policy-20040702.ebuild 2281
-MD5 221bc2c181c7873f506794fa60463d1d selinux-base-policy-20040906.ebuild 2281
+MD5 f7776d1ab6f9f2451f58e3f31eb72cfb selinux-base-policy-20050224.ebuild 2461
 MD5 4188897e85b859da5b7096e0f8f4b7e1 selinux-base-policy-20041023.ebuild 2429
-MD5 aa75977434391487a1fe3dfe2394157d files/digest-selinux-base-policy-20040702 80
-MD5 9ca92516b64d82899ea8fd92f15af3da files/digest-selinux-base-policy-20040906 80
 MD5 932d38a62aa8b2109a8df55d9dd6327a files/digest-selinux-base-policy-20041023 80
 MD5 dfc9d0a09e281b3f658ef0f6bc29a2bc files/digest-selinux-base-policy-20041123 80
+MD5 8697f881bc2285a0a0c5e6f3f29e359e files/digest-selinux-base-policy-20050224 80
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.0 (GNU/Linux)
 
-iD8DBQFB7wK+MTuwkQ6eEKsRAj2+AJ92NfyTO3AIYrcDlTny8hy7khPxsgCgjx5X
-9fGkVBxB1fWkAQ3gLYI+oD4=
-=q+/9
+iD8DBQFCHo+qMTuwkQ6eEKsRAlj9AKCsWMp64RhBzeVd3ecSVxWcjJwjUgCgs9XH
+5zT5SLFwhiiFJU6HcbUVGCM=
+=GNX9
 -----END PGP SIGNATURE-----
