@@ -1,1 +1,0 @@
-MD5 9d7d602491eda3f344b9b948f28e0f39 selinux-base-policy-20040702.tar.bz2 69967
