@@ -1,1 +1,0 @@
-MD5 51494724a78860531984403a4bc047aa selinux-base-policy-20040906.tar.bz2 70966
