@@ -1,6 +1,12 @@
 # ChangeLog for sec-policy/selinux-base-policy
 # Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sec-policy/selinux-base-policy/ChangeLog,v 1.33 2005/01/20 01:00:48 pebenito Exp $
+# $Header: /var/cvsroot/gentoo-x86/sec-policy/selinux-base-policy/ChangeLog,v 1.34 2005/02/25 02:38:25 pebenito Exp $
+
+*selinux-base-policy-20050224 (24 Feb 2005)
+
+  24 Feb 2005; Chris PeBenito <pebenito@gentoo.org>
+  +selinux-base-policy-20050224.ebuild:
+  New release.
 
   19 Jan 2005; Chris PeBenito <pebenito@gentoo.org>
   selinux-base-policy-20041123.ebuild:
